--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <form id="myFormM" action="?action=profile" method="post" enctype="multipart/form-data">
+ <form id="myFormM" action="http://challenge01.root-me.org/web-client/ch22/index.php?action=profile" method="post" enctype="multipart/form-data">
  <input name="username" value="tijecal918@lucvu.com">
  <input name="status" value="on">
  </form>
