--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <form id="myFormM" action="http://challenge01.root-me.org/web-client/ch22/index.php?action=profile" method="post" enctype="multipart/form-data">
- <input name="username" value="tijecal918@lucvu.com">
+ <input name="username" value="User">
  <input name="status" value="on">
  </form>
   <script>
